--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["node", "express", "static", "twitter", "redis", "tortoise", "rabbitMQ"]
    "env": {
-     "NODE_ENV": "production"
+     "NODE_ENV": "production",
   "LOGGER_LEVEL": "info",
 "LOGGER_ENABLED": "false",
 "TWITTER_CONSUMER_KEY": "From your twitter App",
