--- a/app.json
+++ b/app.json
@@ -5,14 +5,14 @@
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["node", "express", "static", "twitter", "redis", "tortoise", "rabbitMQ"]
    "env": {
-     "NODE_ENV": "production",
-  "LOGGER_LEVEL": "info",
-"LOGGER_ENABLED": "false",
-"TWITTER_CONSUMER_KEY": "From your twitter App",
+          "NODE_ENV": "production",
+          "LOGGER_LEVEL": "info",
+          "LOGGER_ENABLED": "false",
+          "TWITTER_CONSUMER_KEY": "From your twitter App",
 "TWITTER_CONSUMER_SECRET": "From your twitter App",
 "TWITTER_ACCESS_TOKEN_KEY": "From your twitter App",
 "TWITTER_ACCESS_TOKEN_SECRET": "From your twitter App",
-"TWITTER_TRACK:" "nodejs,node.js,risingstack,microservice,micro-service"
+"TWITTER_TRACK:" "nodejs,node.js,risingstack,microservice,micro-service",
 "RABBITMQ_URI": ""
     },
 "addons": [
